--- a/department-ng/src/index.html
+++ b/department-ng/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Department</title>
+  <title>DepartmentNg</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>hello bhargav</h1>
+  <app-root></app-root>
 </body>
 </html>
